# claude-memory-engine

./: .gitignore  .worktreeinclude  CHANGELOG.en.md  CHANGELOG.md  CONTRIBUTING.en.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.en.md  README.md  SECURITY.en.md  SECURITY.md  install.sh  pyproject.toml
.claude/: settings.json
.claude/hooks/: destructive_git_guard.sh  issue_close_basis_audit.sh  issue_close_basis_guard.sh  main_checkout_drift_notice.sh  private_words_guard.sh  rules_delivery_guard.sh  work_snapshot.sh
.githooks/: pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  tests.yml
claude_memory/: __init__.py  applies_to.py  archive_prune.py  catalog_generate.py  claude_code_env.py  cli.py  config.py  hooks_cli.py  installer.py  issue_close_watch.py  lesson_files.py  llm_actuality.py  memory_archive.py  memory_concurrency.py  memory_retrieve.py  messages.py  model_registry_guard.py  precedent_index.py  self_check.py  session_marker_guard.py  sqlite_index.py  stale_reconcile.py  staleness.py  stop_check.py  subagent_efficiency_log.py  subagent_model_guard.py
examples/: claude-memory.config.json  claude-memory.config.ru.json
hooks/: cme_hook.sh
tests/: conftest.py  test_applies_to.py  test_audit_2026_06_18_fixes.py  test_catalog_generate.py  test_claude_code_env.py  test_claude_md_references_exist.py  test_cli.py  test_close_pattern_case_axis.py  test_config.py  test_config_hostile_types.py  test_config_soft_spots.py  test_destructive_git_guard.py  test_destructive_git_guard_by_effect.py  test_examples_sync.py  test_git_allowlist.py  test_hooks_cli.py  test_hooks_wiring.py  test_i18n_and_config.py  test_install_sh_help.py  test_installer.py  test_instructions_size.py  test_issue_close_basis_audit.py  test_issue_close_basis_guard.py  test_issue_close_watch.py  test_lesson_files.py  test_llm_actuality.py  test_main_checkout_drift_notice.py  test_memory_archive.py  test_memory_concurrency.py  test_memory_retrieve.py  test_messages_coverage.py  test_model_registry_guard.py  test_precedent_index.py  test_prepush_leak_guard.py  test_private_words_guard.py  test_private_words_whitelist.py  test_repo_invariants.py  test_rules_delivery_guard.py  test_self_check_settings.py  test_self_diagnostics.py  (+12 more)
