[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-memory-engine"
version = "0.21.0"
description = "Reusable lessons/memory engine for Claude Code: frontmatter lessons, auto-CATALOG, offline retrieval, path-triggered lessons, auto-maintenance, parallel-session and sub-agent guards."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "Arnoldig" }]
keywords = ["claude-code", "memory", "lessons", "hooks", "llm-agent"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []  # чистый stdlib — нулевые зависимости (важно: гоняется в shell-хуке)

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5"]

[project.scripts]
claude-memory = "claude_memory.cli:main"

[tool.setuptools]
packages = ["claude_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Линтер. НАБОР ПРАВИЛ НАМЕРЕННО УЗКИЙ, и это главное решение здесь.
#
# Включены только те, что ловят МОЛЧАЛИВУЮ поломку: `E9` — синтаксис и ошибки времени
# исполнения, `F` (pyflakes) — необъявленное имя, мёртвый импорт, переопределение,
# недостижимая переменная. Это ровно домашний класс дефектов движка: код запускается,
# сюита зелёная, а ветка не работает и молчит об этом.
#
# Стилевые правила (длина строки, порядок импортов, кавычки) НЕ включены осознанно.
# Линтер, который спорит о вкусах, начинают глушить `noqa`, а вместе с вкусами глушат и
# настоящие находки — тот же исход, что у стража, выключенного, чтобы не мешал. Первый
# прогон на живом коде дал ровно 9 находок, все — мёртвые импорты и одно затенение;
# шума ноль. Расширять набор — только под конкретный воспроизведённый дефект.
#
# `target-version` привязан к самой старой поддерживаемой версии, а не к версии
# разработчика: иначе линтер пропустит синтаксис, который у пользователя не соберётся.
[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E9", "F"]
